<?xml version="1.0" encoding="utf-8"?>
<!--
/*******************************************************************************
* Copyright (c) 2014 IBM Corp.
*
* All rights reserved. This program and the accompanying materials
* are made available under the terms of the Eclipse Public License v1.0
* and Eclipse Distribution License v1.0 which accompany this distribution.
*
* The Eclipse Public License is available at
*   http://www.eclipse.org/legal/epl-v10.html
* and the Eclipse Distribution License is available at
*   http://www.eclipse.org/org/documents/edl-v10.php.
*
* Contributors:
*    Mike Robertson - initial contribution
*******************************************************************************/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              style="@style/ActivityBackground"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="com.ibm.demo.IoTStarter.fragments.LoginFragment"
        >
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="top"
                  android:orientation="horizontal">
        <TextView
                style="@style/MyActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_id_iot"
                android:id="@+id/deviceIDSettingIoT"
                />
        <View android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="1" />
        <TextView
                style="@style/MyActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_id_iot_value"
                android:id="@+id/deviceIDIoT"
                />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dip"
                  android:layout_weight="1"
                  android:gravity="center|bottom"
                  android:orientation="vertical">
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/accel_info"
                android:id="@+id/accelInfo"
                />
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/accel_x"
                android:id="@+id/accelX"
                />
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/accel_y"
                android:id="@+id/accelY"
                />
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/accel_z"
                android:id="@+id/accelZ"
                />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dip"
                  android:layout_weight="1"
                  android:gravity="center|bottom"
                  android:orientation="vertical">
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:paddingTop="16dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/messages_published"
                android:id="@+id/messagesPublishedView"
                />
        <TextView
                style="@style/MyActionBarTitleText"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/messages_received"
                android:id="@+id/messagesReceivedView"
                />
        <Button
                style="@style/BottomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:id="@+id/sendText"
                android:text="@string/send_text"/>
    </LinearLayout>
</LinearLayout>