<?xml version="1.0" encoding="utf-8"?>
<!--
/*******************************************************************************
* Copyright (c) 2014 IBM Corp.
*
* All rights reserved. This program and the accompanying materials
* are made available under the terms of the Eclipse Public License v1.0
* and Eclipse Distribution License v1.0 which accompany this distribution.
*
* The Eclipse Public License is available at
*   http://www.eclipse.org/legal/epl-v10.html
* and the Eclipse Distribution License is available at
*   http://www.eclipse.org/org/documents/edl-v10.php.
*
* Contributors:
*    Mike Robertson - initial contribution
*******************************************************************************/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              style="@style/ActivityBackground"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:background="@drawable/ic_background"
              tools:context="com.ibm.demo.IoTStarter.fragments.LoginFragment"
        >
        <TextView
                style="@style/MyActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/activity_setting_margin"
                android:paddingBottom="@dimen/activity_setting_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/organization_setting"
                android:id="@+id/organizationSetting"
                />
        <EditText
                style="@style/MyActionBarTitleText"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="@dimen/activity_setting_margin"
                android:paddingBottom="@dimen/activity_setting_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:hint="@string/organization_value"
                android:inputType="text"
                android:id="@+id/organizationValue"
                />
        <TextView
                style="@style/MyActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/activity_setting_margin"
                android:paddingBottom="@dimen/activity_setting_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/device_id_setting"
                android:id="@+id/deviceIDSetting"
                />
        <EditText
                style="@style/MyActionBarTitleText"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="@dimen/activity_setting_margin"
                android:paddingBottom="@dimen/activity_setting_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:hint="@string/device_id_value"
                android:inputType="text"
                android:id="@+id/deviceIDValue"
                />
        <TextView
                style="@style/MyActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/activity_setting_margin"
                android:paddingBottom="@dimen/activity_setting_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textAlignment="center"
                android:text="@string/auth_token_setting"
                android:id="@+id/authTokenSetting"
                />
        <EditText
                style="@style/MyActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="@dimen/activity_setting_margin"
                android:paddingBottom="@dimen/activity_setting_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:hint="@string/auth_token_value"
                android:inputType="textPassword"
                android:id="@+id/authTokenValue"
                />
        <Button
            style="@style/SmallButton"
            android:layout_gravity="center|bottom"
            android:text="@string/showToken_button"
            android:id="@+id/showTokenButton"/>
        <TextView
                style="@style/MyActionBarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/activity_setting_margin"
                android:paddingBottom="@dimen/activity_setting_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textAlignment="center"
                android:text="@string/is_connected"
                android:id="@+id/isConnected"
                />
        <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        <Button
                style="@style/BottomButton"
                android:layout_gravity="center|bottom"
                android:text="@string/activate_button"
                android:id="@+id/activateButton"/>
</LinearLayout>

